# global-pygments-plugin

./: .gitignore  AUTHORS  ChangeLog  LICENSE  Makefile.am  NEWS  README.md  acinclude.m4  configure.ac  pygments_parser.py  pygments_parser.py.in  reconf.sh
libparser/: Makefile.am  parser.h
m4/: check_djgpp.m4
plugin-factory/: Makefile.am  pygments-parser.c
test/: Makefile.am  ctags_stub.py  ctags_stub.py.in  test_ctags_parser.py  test_global.py  test_merging_parser.py  test_pygments_parser.py  tests.sh.in
